# ALADIN-Services

./: .gitignore  .gitmodules  README.md
.github/workflows/: service-fermentaladin-service.yml  service-graph-rewriting-service.yml  service-jsonpath-mapper-service.yml  service-noise-generation-service.yml  service-openai-wrapper-service.yml
services/fermentaladin-service/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
services/fermentaladin-service/http-tests/: health.http  models.http  simulate.http
services/fermentaladin-service/src/: api.py  generate_openapi.py  main.py
services/fermentaladin-service/src/DataModels/: input_definition.py  model_definition.py  result_definition.py
services/fermentaladin-service/src/InputAdapter/: base_input_adapter.py  excel_adapter.py  file_input_adapter.py  input_adapter_strategy.py  std_in_adapter.py
services/fermentaladin-service/src/OutputAdapter/: base_output_adapter.py  chart_js_adapter.py  df_adapter.py  output_adapter_strategy.py
services/fermentaladin-service/src/Util/: arg_parser.py  base_io_adapter.py  multiplot_ferm.py  strategy_pattern.py  sync_excel_models_to_json_file.py
services/fermentaladin-service/src/calc/: Fx_ODE_Bioreaktor.py  Nebenrechnungen.py  calc_bioreactor.py
services/fermentaladin-service/test/: test_file_input_adapter.py
services/graph-comparator-service/: Dockerfile  docker-compose.yml  requirements.txt
services/graph-rewriting-service/: .dockerignore  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  graph-rewriting-service.openapi.json  package.json  supervisord.conf  tsconfig.json
services/jsonpath-mapper-service/: .gitignore  .nycrc.json  Dockerfile  Makefile  package-lock.json  package.json
services/noise-generation-service/: Dockerfile  Makefile  README.md  noise-generation-service.openapi.json  pyproject.toml
services/noise-generation-service/src/: api.py  generate_openapi.py
services/noise-generation-service/src/noise_generation_service/: __init__.py  cli.py  generator.py  rendering.py
services/noise-generation-service/test/: test_api.py  test_cli.py  test_generate_openapi.py  test_generator.py
services/openai-wrapper-service/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  openai-wrapper-service.openapi.json  pyproject.toml
services/openai-wrapper-service/scripts/: generate_openapi.py
services/openai-wrapper-service/src/: api.py  generate_openapi.py
services/openai-wrapper-service/src/openai_wrapper_service/: __init__.py  cli.py  client.py  config.py  schemas.py
services/openai-wrapper-service/test/: test_api.py  test_cli.py  test_generate_openapi.py
services/sql-assessment-service/: .dockerignore  .gitignore  Dockerfile  README.md  backup.sql  docker-compose.yml  (+5 more)
(+112 files in other folders)
