[project]
name = "fermentationmodel"
version = "0.1.0"
description = "Bioreactor fermentation simulation exposed as a FastAPI HTTP service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.3",
    "et-xmlfile==2.0.0",
    "fonttools==4.61.1",
    "iniconfig==2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
# E501 (line-too-long) is not enforced: the existing scientific code contains
# long German comments and inline math that should not be broken arbitrarily.
ignore = ["E501"]
